--- a/styles/actors.less
+++ b/styles/actors.less
@@ -25,6 +25,12 @@
       flex: 0 0 110px;
       height: 110px;
       margin: 5px;
+      justify-content: center;
+      display: flex;
+
+      img {
+        height: 100%;
+      }
     }
 
     .header-fields {
